-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
c04b8d1786 (qt/qtwayland/dev) 3f7fd99fb8 (qt/qtwayland/6.2) 469c20d0b9 (qt/qtwayland/6.3) 3f7fd99fb8 (qt/tqtc-qtwayland/6.2) 469c20d0b9 (qt/tqtc-qtwayland/6.3) c04b8d1786 (qt/tqtc-qtwayland/dev) 6e313efb6c (qt/qtwayland/dev) c0a9233b19 (qt/qtwayland/6.3)
I'm building Qt via the super module, with 4 modules only: qtbase,qtwayland,qtimageformats,qtsvg.
As the result, I'm getting the following error:
In file included from /usr/src/Libraries/qt_6_2_0/qtbase/include/QtWaylandCompositor/qwaylandquickcompositor.h:1, from /usr/src/Libraries/qt_6_2_0/qtbase/include/QtWaylandCompositor/QtWaylandCompositor:27, from /usr/src/Libraries/qt_6_2_0/qtwayland/src/plugins/hardwareintegration/compositor/linux-dmabuf-unstable-v1/CMakeFiles/QWaylandDmabufClient BufferIntegrationPlugin.dir/cmake_pch.hxx:5, from <command-line>: /usr/src/Libraries/qt_6_2_0/qtwayland/src/compositor/compositor_api/qwaylandquickcompositor.h:34:10: fatal error: QtQml/QQmlParserStatus: No such file or directory 34 | #include <QtQml/QQmlParserStatus> | ^~~~~~~~~~~~~~~~~~~~~~~~ compilation terminated. [1396/1568] Building CXX object qtwayland/src/plugins/hardwareintegration/comp...-egl/CMakeFiles/QWaylandEglClientBufferIntegrationPlugin.dir/cmake_pch.hxx.gch FAILED: qtwayland/src/plugins/hardwareintegration/compositor/wayland-egl/CMakeFiles/QWaylandEglClientBufferIntegrationPlugin.dir/cmake_pch.hxx.gch
I tried to disable QtWaylandCompositor, but that doesn't work as well:
CMake Error at qtbase/cmake/QtProcessConfigureArgs.cmake:251 (message):
Enabling/Disabling unknown feature 'wayland-server'.
Call Stack (most recent call first):
qtbase/cmake/QtProcessConfigureArgs.cmake:639 (qtConfAddError)
I tried to disable PCH, doesn't work as well:
ERROR: Feature "precompile_header": Forcing to "ON" breaks its condition: BUILD_WITH_PCH AND TEST_precompile_header Condition values dump: BUILD_WITH_PCH = "OFF" TEST_precompile_header = "TRUE"
- relates to
-
QTBUG-104318 Qt 6.3.1 qt-wayland build failed: fatal error: QtQml/QQmlParserStatus: No such file or directory
-
- Closed
-
For Gerrit Dashboard: QTBUG-97593 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
389996,3 | Fix WaylandCompositor PCH build without qtdeclarative | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
390774,2 | Fix WaylandCompositor PCH build without qtdeclarative | 6.3 | qt/qtwayland | Status: MERGED | +2 | 0 |
390775,2 | Fix WaylandCompositor PCH build without qtdeclarative | 6.2 | qt/qtwayland | Status: MERGED | +2 | 0 |
416296,4 | Fix WaylandCompostior build without QtQml | dev | qt/qtwayland | Status: MERGED | +2 | 0 |
416478,2 | Fix WaylandCompostior build without QtQml | 6.4 | qt/qtwayland | Status: MERGED | +2 | 0 |
416479,2 | Fix WaylandCompostior build without QtQml | 6.3 | qt/qtwayland | Status: MERGED | +2 | 0 |
416484,1 | Fix WaylandCompostior build without QtQml | tqtc/lts-6.2 | qt/tqtc-qtwayland | Status: ABANDONED | 0 | 0 |