Fix WaylandCompositor PCH build without qtdeclarative

Currently, quick-related headers included in the module header
conditionlessly what makes it fail with PCH when Qt is built without
qtdeclarative.

Fixes: QTBUG-97593
Change-Id: Ida73f3369982594aae9e14160f6966fe57c7e089
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit c04b8d178621b5c7c75d717ef18f76f918890e06)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>