src/compositor/compositor_api/qwaylandquickitem.h
@@ -42,6 +42,8 @@
 
 Q_DECLARE_METATYPE(QWaylandQuickSurface*)
 
+QT_REQUIRE_CONFIG(wayland_compositor_quick);
+
 QT_BEGIN_NAMESPACE
 
 class QWaylandSeat;
