src/compositor/extensions/qwaylandquickshellintegration.h
@@ -33,6 +33,8 @@
 #include <QtCore/QObject>
 #include <QtWaylandCompositor/qtwaylandcompositorglobal.h>
 
+QT_REQUIRE_CONFIG(wayland_compositor_quick);
+
 QT_BEGIN_NAMESPACE
 
 class Q_WAYLAND_COMPOSITOR_EXPORT QWaylandQuickShellIntegration : public QObject
